Fixed the gap between header and dock components

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,8 @@
 @import "../../node_modules/cesium/Build/Cesium/Widgets/widgets.css";
 
 body {
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -18,10 +20,13 @@ a {
   background-color: transparent;
 }
 
-.th-wrapper {
-  position: sticky;
+.main {
+  margin-top: -32px;
 }
 
-.header {
+#earthdata-tophat2 {
+  display: block;
   position: fixed;
+  width: 100vw;
+  height: 32px;
 }
